refactor: apply code conventions to user api
